Logic improvements, bug fixes